@@ -73,11 +73,12 @@ import static org.apache.openmeetings.util.OpenmeetingsVariables.setApplicationN
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setAudioBitrate;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setAudioRate;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setBaseUrl;
-import static org.apache.openmeetings.util.OpenmeetingsVariables.setChatSenndOnEnter;
+import static org.apache.openmeetings.util.OpenmeetingsVariables.setChatSendOnEnter;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setContentSecurityPolicy;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setCryptClassName;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setDefaultGroup;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setDefaultLang;
+import static org.apache.openmeetings.util.OpenmeetingsVariables.setDefaultTimezone;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setDisplayNameEditable;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setExtProcessTtl;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.setGaCode;
@@ -97,7 +98,6 @@ import static org.apache.openmeetings.util.OpenmeetingsVariables.setxFrameOption
 
 import java.net.UnknownHostException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
@@ -117,7 +117,6 @@ import org.apache.openmeetings.db.dao.IDataProviderDao;
 import org.apache.openmeetings.db.dao.user.UserDao;
 import org.apache.openmeetings.db.entity.basic.Configuration;
 import org.apache.openmeetings.db.util.DaoHelper;
-import org.apache.openmeetings.util.OpenmeetingsVariables;
 import org.apache.openmeetings.util.crypt.CryptProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -186,7 +185,7 @@ public class ConfigurationDao implements IDataProviderDao<Configuration> {
 		List<Configuration> result = new ArrayList<>();
 		for (String key : keys) { //iteration is necessary to fill list with all values
 			List<Configuration> r = em.createNamedQuery("getConfigurationsByKeys", Configuration.class)
-					.setParameter("keys", Arrays.asList(key))
+					.setParameter("keys", List.of(key))
 					.getResultList();
 			result.add(r.isEmpty() ? null : r.get(0));
 		}
@@ -462,7 +461,7 @@ public class ConfigurationDao implements IDataProviderDao<Configuration> {
 			log.error("There is no correct time zone set in the configuration of OpenMeetings for the key default.timezone or key is missing in table, using default locale!");
 			defaultTzName = TimeZone.getDefault().getID();
 		}
-		OpenmeetingsVariables.setDefaultTimezone(defaultTzName);
+		setDefaultTimezone(defaultTzName);
 	}
 
 	private void reloadRestAllowOrigin() {
@@ -494,7 +493,7 @@ public class ConfigurationDao implements IDataProviderDao<Configuration> {
 	}
 
 	private void reloadChatSendOnEnter() {
-		setChatSenndOnEnter(getBool(CONFIG_CHAT_SEND_ON_ENTER, false));
+		setChatSendOnEnter(getBool(CONFIG_CHAT_SEND_ON_ENTER, false));
 	}
 
 	private void reloadAllowRegisterFront() {
@@ -561,7 +560,7 @@ public class ConfigurationDao implements IDataProviderDao<Configuration> {
 	}
 
 	private static JSONObject getHotkey(String value) {
-		List<String> partList = Arrays.asList(value.split("\\+"));
+		List<String> partList = List.of(value.split("\\+"));
 		Set<String> parts = new HashSet<>(partList);
 		return new JSONObject()
 				.put("alt", parts.contains("Alt"))
