@@ -19,14 +19,13 @@
 package org.apache.openmeetings.web.admin.rooms;
 
 import static org.apache.openmeetings.db.util.AuthLevelUtil.hasGroupAdminLevel;
-import static org.apache.openmeetings.util.OpenmeetingsVariables.ATTR_CLASS;
 import static org.apache.openmeetings.web.admin.AdminUserChoiceProvider.PAGE_SIZE;
 import static org.apache.openmeetings.web.app.Application.kickUser;
 import static org.apache.openmeetings.web.app.WebSession.getRights;
 import static org.apache.openmeetings.web.app.WebSession.getUserId;
+import static org.apache.openmeetings.web.common.confirmation.ConfirmableAjaxBorder.newOkCancelDangerConfirm;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
@@ -49,10 +48,8 @@ import org.apache.openmeetings.db.entity.user.User;
 import org.apache.openmeetings.web.admin.AdminBaseForm;
 import org.apache.openmeetings.web.admin.AdminUserChoiceProvider;
 import org.apache.openmeetings.web.app.ClientManager;
-import org.apache.openmeetings.web.common.ConfirmableAjaxBorder;
 import org.apache.openmeetings.web.util.RestrictiveChoiceProvider;
 import org.apache.openmeetings.web.util.RoomTypeDropDown;
-import org.apache.wicket.AttributeModifier;
 import org.apache.wicket.ajax.AjaxRequestTarget;
 import org.apache.wicket.ajax.form.AjaxFormComponentUpdatingBehavior;
 import org.apache.wicket.ajax.markup.html.form.AjaxCheckBox;
@@ -80,12 +77,16 @@ import org.wicketstuff.select2.Response;
 import org.wicketstuff.select2.Select2Choice;
 import org.wicketstuff.select2.Select2MultiChoice;
 
-import com.googlecode.wicket.jquery.ui.JQueryIcon;
-import com.googlecode.wicket.jquery.ui.form.button.AjaxButton;
+import de.agilecoders.wicket.core.markup.html.bootstrap.badge.BadgeBehavior;
+import de.agilecoders.wicket.core.markup.html.bootstrap.badge.BootstrapBadge;
+import de.agilecoders.wicket.core.markup.html.bootstrap.button.BootstrapAjaxButton;
+import de.agilecoders.wicket.core.markup.html.bootstrap.button.BootstrapAjaxLink;
+import de.agilecoders.wicket.core.markup.html.bootstrap.button.Buttons;
+import de.agilecoders.wicket.extensions.markup.html.bootstrap.icon.FontAwesome5IconType;
 
 public class RoomForm extends AdminBaseForm<Room> {
 	private static final long serialVersionUID = 1L;
-	private static final List<Long> DROPDOWN_NUMBER_OF_PARTICIPANTS = Arrays.asList(2L, 4L, 6L, 8L, 10L, 12L, 14L, 16L, 20L, 25L, 32L, 50L,
+	private static final List<Long> DROPDOWN_NUMBER_OF_PARTICIPANTS = List.of(2L, 4L, 6L, 8L, 10L, 12L, 14L, 16L, 20L, 25L, 32L, 50L,
 			100L, 150L, 200L, 500L, 1000L);
 	private final WebMarkupContainer roomList;
 	private final TextField<String> pin = new TextField<>("pin");
@@ -98,17 +99,20 @@ public class RoomForm extends AdminBaseForm<Room> {
 		@Override
 		protected void populateItem(final ListItem<Client> item) {
 			Client c = item.getModelObject();
+			BootstrapAjaxLink<String> del = new BootstrapAjaxLink<>("clientDelete", Buttons.Type.Outline_Danger) {
+				private static final long serialVersionUID = 1L;
+
+				@Override
+				public void onClick(AjaxRequestTarget target) {
+					kickUser(item.getModelObject());
+					updateClients(target);
+				}
+			};
+			del.setIconType(FontAwesome5IconType.times_s)
+					.add(newOkCancelDangerConfirm(this, getString("833")));
 			item.add(new Label("clientId", "" + c.getUserId()))
 				.add(new Label("clientLogin", "" + c.getUser().getLogin()))
-				.add(new ConfirmableAjaxBorder("clientDelete", getString("80"), getString("833")) {
-					private static final long serialVersionUID = 1L;
-
-					@Override
-					protected void onSubmit(AjaxRequestTarget target) {
-						kickUser(item.getModelObject());
-						updateClients(target);
-					}
-				});
+				.add(del);
 		}
 	};
 	private IModel<User> moderator2add = Model.of((User)null);
@@ -142,10 +146,12 @@ public class RoomForm extends AdminBaseForm<Room> {
 				DROPDOWN_NUMBER_OF_PARTICIPANTS, //
 				new ChoiceRenderer<Long>() {
 					private static final long serialVersionUID = 1L;
+
 					@Override
 					public Object getDisplayValue(Long id) {
 						return id;
 					}
+
 					@Override
 					public String getIdValue(Long id, int index) {
 						return "" + id;
@@ -301,22 +307,23 @@ public class RoomForm extends AdminBaseForm<Room> {
 			protected void populateItem(final ListItem<RoomModerator> item) {
 				RoomModerator moderator = item.getModelObject();
 				Label name = new Label("uName", moderator.getUser().getDisplayName());
-				if (moderator.getId() == null) {
-					name.add(AttributeModifier.append(ATTR_CLASS, "newItem"));
-				}
+				BootstrapAjaxLink<String> del = new BootstrapAjaxLink<>("delete", Buttons.Type.Outline_Danger) {
+					private static final long serialVersionUID = 1L;
+
+					@Override
+					public void onClick(AjaxRequestTarget target) {
+						RoomForm.this.getModelObject().getModerators().remove(item.getIndex());
+						target.add(moderatorContainer);
+					}
+				};
+				del.setIconType(FontAwesome5IconType.times_s)
+						.add(newOkCancelDangerConfirm(this, getString("833")));
 				item.add(new CheckBox("superModerator", new PropertyModel<Boolean>(moderator, "superModerator")))
 					.add(new Label("userId", String.valueOf(moderator.getUser().getId())))
 					.add(name)
 					.add(new Label("email", moderator.getUser().getAddress().getEmail()))
-					.add(new ConfirmableAjaxBorder("delete", getString("80"), getString("833")) {
-						private static final long serialVersionUID = 1L;
-
-						@Override
-						protected void onSubmit(AjaxRequestTarget target) {
-							RoomForm.this.getModelObject().getModerators().remove(item.getIndex());
-							target.add(moderatorContainer);
-						}
-					});
+					.add(del)
+					.add(new BootstrapBadge("new", new ResourceModel("lbl.new"), BadgeBehavior.Type.Warning).setVisible((moderator.getId() == null)));
 			}
 		}).setOutputMarkupId(true));
 
@@ -357,7 +364,7 @@ public class RoomForm extends AdminBaseForm<Room> {
 					return new String[] {"number"};
 				}
 			})
-			.add(new AjaxButton("addFiles") {
+			.add(new BootstrapAjaxButton("addFiles", new ResourceModel("1261"), filesForm, Buttons.Type.Outline_Primary) {
 				private static final long serialVersionUID = 1L;
 
 				@Override
@@ -371,11 +378,6 @@ public class RoomForm extends AdminBaseForm<Room> {
 					}
 					target.add(filesContainer, filesForm);
 				}
-
-				@Override
-				protected String getIcon() {
-					return JQueryIcon.PLUSTHICK;
-				}
 			}).setOutputMarkupId(true)
 		);
 		add(filesContainer.add(new ListView<RoomFile>("files") {
@@ -384,24 +386,27 @@ public class RoomForm extends AdminBaseForm<Room> {
 			@Override
 			protected void populateItem(final ListItem<RoomFile> item) {
 				final RoomFile rf = item.getModelObject();
+				BootstrapAjaxLink<String> del = new BootstrapAjaxLink<>("delete", Buttons.Type.Outline_Danger) {
+					private static final long serialVersionUID = 1L;
+
+					@Override
+					public void onClick(AjaxRequestTarget target) {
+						Room r = RoomForm.this.getModelObject();
+						for (Iterator<RoomFile> iter = r.getFiles().iterator(); iter.hasNext();) {
+							RoomFile _rf = iter.next();
+							if (_rf.getFile().getId().equals(rf.getFile().getId())) {
+								iter.remove();
+								break;
+							}
+						}
+						target.add(filesContainer);
+					}
+				};
+				del.setIconType(FontAwesome5IconType.times_s)
+						.add(newOkCancelDangerConfirm(this, getString("833")));
 				item.add(new Label("name", new PropertyModel<>(rf.getFile(), "name")))
 					.add(new Label("wbIdx", new PropertyModel<>(rf, "wbIdx")))
-					.add(new ConfirmableAjaxBorder("delete", getString("80"), getString("833")) {
-						private static final long serialVersionUID = 1L;
-
-						@Override
-						protected void onSubmit(AjaxRequestTarget target) {
-							Room r = RoomForm.this.getModelObject();
-							for (Iterator<RoomFile> iter = r.getFiles().iterator(); iter.hasNext();) {
-								RoomFile _rf = iter.next();
-								if (_rf.getFile().getId().equals(rf.getFile().getId())) {
-									iter.remove();
-									break;
-								}
-							}
-							target.add(filesContainer);
-						}
-					});
+					.add(del);
 			}
 		}).setOutputMarkupId(true));
 
@@ -449,7 +454,7 @@ public class RoomForm extends AdminBaseForm<Room> {
 
 	private static Room newRoom() {
 		Room r = new Room();
-		r.hide(RoomElement.MicrophoneStatus);
+		r.hide(RoomElement.MICROPHONE_STATUS);
 		return r;
 	}
 
