@@ -30,7 +30,6 @@ import static org.apache.openmeetings.web.app.Application.getDashboardContext;
 import static org.apache.openmeetings.web.app.Application.isInvaldSession;
 import static org.apache.openmeetings.web.app.Application.removeInvalidSession;
 
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
@@ -93,7 +92,7 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 	private static final long serialVersionUID = 1L;
 	private static final Logger log = LoggerFactory.getLogger(WebSession.class);
 	public static final int MILLIS_IN_MINUTE = 60000;
-	public static final List<String> AVAILABLE_TIMEZONES = Collections.unmodifiableList(Arrays.asList(TimeZone.getAvailableIDs()));
+	public static final List<String> AVAILABLE_TIMEZONES = Collections.unmodifiableList(List.of(TimeZone.getAvailableIDs()));
 	public static final Set<String> AVAILABLE_TIMEZONE_SET = Collections.unmodifiableSet(new LinkedHashSet<>(AVAILABLE_TIMEZONES));
 	public static final String WICKET_ROOM_ID = "wicketroomid";
 	private Long userId = null;
@@ -182,7 +181,7 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 						// the loaded credentials are wrong. erase them.
 						strategy.remove();
 					}
-				} catch (OmException e) {
+				} catch (Exception e) {
 					//no-op, bad credentials
 				}
 			}
@@ -208,10 +207,10 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 				if (i != null && i.isAllowEntry()) {
 					Set<Right> hrights = new HashSet<>();
 					if (i.getRoom() != null) {
-						hrights.add(Right.Room);
+						hrights.add(Right.ROOM);
 						roomId = i.getRoom().getId();
 					} else if (i.getAppointment() != null && i.getAppointment().getRoom() != null) {
-						hrights.add(Right.Room);
+						hrights.add(Right.ROOM);
 						roomId = i.getAppointment().getRoom().getId();
 					} else if (i.getRecording() != null) {
 						recordingId = i.getRecording().getId();
@@ -232,19 +231,19 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 		if (!soapLogin.isUsed() || soapLogin.getAllowSameURLMultipleTimes()) {
 			Sessiondata sd = sessionDao.check(soapLogin.getSessionHash());
 			if (sd.getXml() != null) {
-				RemoteSessionObject remoteUser = RemoteSessionObject.fromXml(sd.getXml());
-				if (remoteUser != null && !Strings.isEmpty(remoteUser.getExternalUserId())) {
-					User user = userDao.getExternalUser(remoteUser.getExternalUserId(), remoteUser.getExternalUserType());
+				RemoteSessionObject remoteUser = RemoteSessionObject.fromString(sd.getXml());
+				if (remoteUser != null && !Strings.isEmpty(remoteUser.getExternalId())) {
+					User user = userDao.getExternalUser(remoteUser.getExternalId(), remoteUser.getExternalType());
 					if (user == null) {
 						user = getNewUserInstance(null);
 						user.setFirstname(remoteUser.getFirstname());
 						user.setLastname(remoteUser.getLastname());
 						user.setLogin(remoteUser.getUsername());
-						user.setType(Type.external);
-						user.setExternalId(remoteUser.getExternalUserId());
-						user.addGroup(groupDao.getExternal(remoteUser.getExternalUserType()));
+						user.setType(Type.EXTERNAL);
+						user.setExternalId(remoteUser.getExternalId());
+						user.addGroup(groupDao.getExternal(remoteUser.getExternalType()));
 						user.getRights().clear();
-						user.getRights().add(Right.Room);
+						user.getRights().add(Right.ROOM);
 						user.getAddress().setEmail(remoteUser.getEmail());
 						user.setPictureUri(remoteUser.getPictureUrl());
 					} else {
@@ -280,7 +279,7 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 			if (u.getGroupUsers() != null && !AuthLevelUtil.hasAdminLevel(r)) {
 				for (GroupUser gu : u.getGroupUsers()) {
 					if (gu.isModerator()) {
-						r.add(Right.GroupAdmin);
+						r.add(Right.GROUP_ADMIN);
 						break;
 					}
 				}
@@ -299,16 +298,16 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 	public boolean signIn(String login, String password, Type type, Long domainId) throws OmException {
 		User u;
 		switch (type) {
-			case ldap:
+			case LDAP:
 				u = ldapManager.login(login, password, domainId);
 				break;
-			case user:
+			case USER:
 				/* we will allow login against internal DB in case user 'guess' LDAP password */
 				u = userDao.login(login, password);
 				break;
-			case oauth:
+			case OAUTH:
 				// we did all the checks at this stage, just set the user
-				u = userDao.getByLogin(login, Type.oauth, domainId);
+				u = userDao.getByLogin(login, Type.OAUTH, domainId);
 				break;
 			default:
 				throw new OmException("error.unknown");
@@ -462,7 +461,7 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 		boolean existMyRoomWidget = false, existRssWidget = false, existAdminWidget = false;
 		boolean showMyRoomConfValue = cfgDao.getBool(CONFIG_MYROOMS_ENABLED, true) && cfgDao.getBool(CONFIG_DASHBOARD_SHOW_MYROOMS, false);
 		boolean showRssConfValue = cfgDao.getBool(CONFIG_DASHBOARD_SHOW_RSS, false);
-		boolean showAdminWidget = getRights().contains(User.Right.Admin);
+		boolean showAdminWidget = getRights().contains(User.Right.ADMIN);
 		boolean save = false;
 
 		WidgetFactory widgetFactory = dashboardContext.getWidgetFactory();
@@ -534,10 +533,10 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 	}
 
 	private static void checkIsInvalid() {
-		if (isInvaldSession(get().getId())) {
+		WebSession session = get();
+		if (isInvaldSession(session.getId())) {
 			setKickedByAdmin(true);
-			removeInvalidSession(get().getId());
-			org.apache.wicket.Session session = get();
+			removeInvalidSession(session.getId());
 			session.invalidateNow();
 			Application.get().restartResponseAtSignInPage();
 		}
