@@ -34,7 +34,6 @@ import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -87,12 +86,13 @@ import org.springframework.web.context.support.XmlWebApplicationContext;
 import com.googlecode.wicket.jquery.core.JQueryBehavior;
 import com.googlecode.wicket.jquery.core.Options;
 import com.googlecode.wicket.jquery.ui.form.button.AjaxButton;
+import com.googlecode.wicket.jquery.ui.form.button.IndicatingAjaxButton;
 import com.googlecode.wicket.jquery.ui.widget.dialog.DialogButton;
 import com.googlecode.wicket.jquery.ui.widget.progressbar.ProgressBar;
 import com.googlecode.wicket.jquery.ui.widget.tooltip.TooltipBehavior;
 import com.googlecode.wicket.jquery.ui.widget.wizard.AbstractWizard;
-import com.googlecode.wicket.kendo.ui.form.button.IndicatingAjaxButton;
-import com.googlecode.wicket.kendo.ui.panel.KendoFeedbackPanel;
+
+import de.agilecoders.wicket.core.markup.html.bootstrap.common.NotificationPanel;
 
 public class InstallWizard extends AbstractWizard<InstallationConfig> {
 	private static final long serialVersionUID = 1L;
@@ -146,7 +146,7 @@ public class InstallWizard extends AbstractWizard<InstallationConfig> {
 
 	@Override
 	protected WebMarkupContainer newFeedbackPanel(String id) {
-		KendoFeedbackPanel feedback = new KendoFeedbackPanel("feedback", new Options("button", true));
+		NotificationPanel feedback = new NotificationPanel("feedback");
 		feedback.setEscapeModelStrings(false);
 		return feedback;
 	}
@@ -209,12 +209,12 @@ public class InstallWizard extends AbstractWizard<InstallationConfig> {
 		private final TextField<String> pass = new TextField<>("password");
 		private final Form<ConnectionProperties> form = new Form<>("form", new CompoundPropertyModel<>(getProps(null))) {
 			private static final long serialVersionUID = 1L;
-			private final DropDownChoice<DbType> db = new DropDownChoice<>("dbType", Arrays.asList(DbType.values()), new ChoiceRenderer<DbType>() {
+			private final DropDownChoice<DbType> db = new DropDownChoice<>("dbType", List.of(DbType.values()), new ChoiceRenderer<DbType>() {
 				private static final long serialVersionUID = 1L;
 
 				@Override
 				public Object getDisplayValue(DbType object) {
-					return getString(String.format("install.wizard.db.step.%s.name", object.name()));
+					return getString(String.format("install.wizard.db.step.%s.name", object.dbName()));
 				}
 
 				@Override
@@ -252,7 +252,7 @@ public class InstallWizard extends AbstractWizard<InstallationConfig> {
 			}
 
 			private String getDbName(ConnectionProperties props) {
-				return getString("install.wizard.db.step.instructions." + props.getDbType().name());
+				return getString("install.wizard.db.step.instructions." + props.getDbType().dbName());
 			}
 
 			@Override
@@ -271,10 +271,10 @@ public class InstallWizard extends AbstractWizard<InstallationConfig> {
 					valid = conn.isValid(0); //no timeout
 					String sql = null;
 					switch (props.getDbType()) {
-						case db2:
+						case DB2:
 							sql = "select count(*) from systables";
 							break;
-						case oracle:
+						case ORACLE:
 							sql = "SELECT 1 FROM DUAL";
 							break;
 						default:
@@ -332,7 +332,7 @@ public class InstallWizard extends AbstractWizard<InstallationConfig> {
 					return props; // initial select
 				}
 				props = ConnectionPropertiesPatcher.getConnectionProperties(conf);
-				if (DbType.h2 != props.getDbType()) {
+				if (DbType.H2 != props.getDbType()) {
 					// resetting default login/password
 					props.setLogin(null);
 					props.setPassword(null);
@@ -346,13 +346,13 @@ public class InstallWizard extends AbstractWizard<InstallationConfig> {
 		private void initForm(boolean getProps, AjaxRequestTarget target) {
 			ConnectionProperties props = getProps ? getProps(form.getModelObject().getDbType()) : form.getModelObject();
 			form.setModelObject(props);
-			host.setVisible(props.getDbType() != DbType.h2);
-			port.setVisible(props.getDbType() != DbType.h2);
-			user.setVisible(props.getDbType() != DbType.h2);
-			pass.setVisible(props.getDbType() != DbType.h2);
+			host.setVisible(props.getDbType() != DbType.H2);
+			port.setVisible(props.getDbType() != DbType.H2);
+			user.setVisible(props.getDbType() != DbType.H2);
+			pass.setVisible(props.getDbType() != DbType.H2);
 			try {
 				switch (props.getDbType()) {
-					case mssql: {
+					case MSSQL: {
 						String url = props.getURL().substring("jdbc:sqlserver://".length());
 						String[] parts = url.split(";");
 						String[] hp = parts[0].split(":");
@@ -361,14 +361,14 @@ public class InstallWizard extends AbstractWizard<InstallationConfig> {
 						dbname.setModelObject(parts[1].substring(parts[1].indexOf('=') + 1));
 						}
 						break;
-					case oracle: {
+					case ORACLE: {
 						String[] parts = props.getURL().split(":");
 						host.setModelObject(parts[3].substring(1));
 						port.setModelObject(Integer.parseInt(parts[4]));
 						dbname.setModelObject(parts[5]);
 						}
 						break;
-					case h2: {
+					case H2: {
 						host.setModelObject("");
 						port.setModelObject(0);
 						String[] parts = props.getURL().split(";");
