@@ -23,7 +23,6 @@ import static org.apache.openmeetings.web.app.Application.kickUser;
 import static org.apache.openmeetings.web.util.CallbackFunctionHelper.getNamedFunction;
 import static org.apache.wicket.ajax.attributes.CallbackParameter.explicit;
 
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
@@ -37,9 +36,8 @@ import org.apache.openmeetings.db.util.ws.RoomMessage;
 import org.apache.openmeetings.db.util.ws.TextRoomMessage;
 import org.apache.openmeetings.web.app.ClientManager;
 import org.apache.openmeetings.web.app.WebSession;
-import org.apache.openmeetings.web.common.ConfirmableAjaxBorder;
-import org.apache.openmeetings.web.common.ConfirmableAjaxBorder.ConfirmableBorderDialog;
 import org.apache.openmeetings.web.common.NameDialog;
+import org.apache.openmeetings.web.common.confirmation.ConfirmationDialog;
 import org.apache.openmeetings.web.room.RoomPanel;
 import org.apache.openmeetings.web.room.RoomPanel.Action;
 import org.apache.openmeetings.web.room.VideoSettings;
@@ -53,12 +51,12 @@ import org.apache.wicket.markup.head.IHeaderResponse;
 import org.apache.wicket.markup.head.PriorityHeaderItem;
 import org.apache.wicket.markup.html.WebMarkupContainer;
 import org.apache.wicket.markup.html.basic.Label;
-import org.apache.wicket.markup.html.form.Form;
 import org.apache.wicket.markup.html.list.ListItem;
 import org.apache.wicket.markup.html.list.ListView;
 import org.apache.wicket.markup.html.panel.Panel;
 import org.apache.wicket.model.LoadableDetachableModel;
 import org.apache.wicket.model.Model;
+import org.apache.wicket.model.ResourceModel;
 import org.apache.wicket.spring.injection.annot.SpringBean;
 import org.apache.wicket.util.string.StringValue;
 import org.apache.wicket.util.string.Strings;
@@ -66,8 +64,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.github.openjson.JSONObject;
-import com.googlecode.wicket.jquery.ui.JQueryUIBehavior;
-import com.googlecode.wicket.jquery.ui.widget.dialog.DialogButton;
 
 public class RoomSidebar extends Panel {
 	private static final long serialVersionUID = 1L;
@@ -83,7 +79,7 @@ public class RoomSidebar extends Panel {
 	private final WebMarkupContainer userList = new WebMarkupContainer("user-list");
 	private final WebMarkupContainer fileTab = new WebMarkupContainer("file-tab");
 	private final SelfIconsPanel selfRights;
-	private ConfirmableAjaxBorder confirmKick;
+	private ConfirmationDialog confirmKick;
 	private boolean showFiles;
 	private boolean avInited = false;
 	private Client kickedClient;
@@ -96,15 +92,15 @@ public class RoomSidebar extends Panel {
 		protected List<Client> load() {
 			Client self = room.getClient();
 			List<Client> list;
-			if (!self.hasRight(Room.Right.moderator) && room.getRoom().isHidden(RoomElement.UserCount)) {
-				list = Arrays.asList(self);
+			if (!self.hasRight(Room.Right.MODERATOR) && room.getRoom().isHidden(RoomElement.USER_COUNT)) {
+				list = List.of(self);
 			} else {
 				list = cm.listByRoom(room.getRoom().getId());
 				list.sort(Comparator.<Client, Integer>comparing(c -> {
-							if (c.hasRight(Room.Right.moderator)) {
+							if (c.hasRight(Room.Right.MODERATOR)) {
 								return 0;
 							}
-							if (c.hasRight(Room.Right.presenter)) {
+							if (c.hasRight(Room.Right.PRESENTER)) {
 								return 1;
 							}
 							return 5;
@@ -134,7 +130,7 @@ public class RoomSidebar extends Panel {
 				cp.setSettings(new JSONObject(s.toString())).update(c);
 				if (!avInited) {
 					avInited = true;
-					if (Room.Type.conference == room.getRoom().getType()) {
+					if (Room.Type.CONFERENCE == room.getRoom().getType()) {
 						streamProcessor.toggleActivity(c, Client.Activity.AUDIO_VIDEO);
 					}
 				}
@@ -163,29 +159,27 @@ public class RoomSidebar extends Panel {
 			private static final long serialVersionUID = 1L;
 
 			@Override
-			protected void onSubmit(AjaxRequestTarget target, DialogButton btn) {
+			protected void onSubmit(AjaxRequestTarget target) {
 				roomFiles.createFolder(target, getModelObject());
+				super.onSubmit(target);
 			}
 		};
-		final Form<?> form = new Form<>("form");
-		ConfirmableBorderDialog confirmTrash = new ConfirmableBorderDialog("confirm-trash", getString("80"), getString("713"), form);
-		roomFiles = new RoomFilePanel("tree", room, addFolder, confirmTrash);
+		roomFiles = new RoomFilePanel("tree", room, addFolder);
 		add(selfRights, userList.add(users).setOutputMarkupId(true)
 				, fileTab.setVisible(!room.isInterview()), roomFiles.setVisible(!room.isInterview()));
 
 		add(addFolder, settings, userCount.setOutputMarkupId(true));
 		add(avSettings);
-		add(confirmKick = new ConfirmableAjaxBorder("confirm-kick", getString("603"), getString("605")) {
+		add(confirmKick = new ConfirmationDialog("confirm-kick", new ResourceModel("603"), new ResourceModel("605")) {
 			private static final long serialVersionUID = 1L;
 
 			@Override
-			protected void onSubmit(AjaxRequestTarget target) {
+			protected void onConfirm(AjaxRequestTarget target) {
 				kickUser(kickedClient);
 			}
 		});
-		add(form.add(confirmTrash), upload = new UploadDialog("upload", room, roomFiles));
+		add(upload = new UploadDialog("upload", room, roomFiles));
 		updateShowFiles(null);
-		add(new JQueryUIBehavior("#room-sidebar-tabs", "tabs"));
 		add(activities = new ActivitiesPanel("activities", room));
 	}
 
@@ -199,7 +193,7 @@ public class RoomSidebar extends Panel {
 		if (room.isInterview()) {
 			return;
 		}
-		showFiles = !room.getRoom().isHidden(RoomElement.Files) && room.getClient().hasRight(Right.presenter);
+		showFiles = !room.getRoom().isHidden(RoomElement.FILES) && room.getClient().hasRight(Right.PRESENTER);
 		roomFiles.setReadOnly(!showFiles, handler);
 	}
 
@@ -224,11 +218,11 @@ public class RoomSidebar extends Panel {
 	}
 
 	public void showUpload(IPartialPageRequestHandler handler) {
-		upload.open(handler);
+		upload.show(handler);
 	}
 
 	public void setFilesActive(IPartialPageRequestHandler handler) {
-		handler.appendJavaScript("$('#room-sidebar-tabs').tabs('option', 'active', 1);");
+		handler.appendJavaScript("$('#room-sidebar-files-tab').tab('show');");
 	}
 
 	public void addActivity(Activity a, IPartialPageRequestHandler handler) {
@@ -249,19 +243,19 @@ public class RoomSidebar extends Panel {
 			Action a = Action.valueOf(o.getString(PARAM_ACTION));
 			switch (a) {
 				case kick:
-					if (self.hasRight(Right.moderator)) {
+					if (self.hasRight(Right.MODERATOR)) {
 						kickedClient = cm.get(uid);
 						if (kickedClient == null) {
 							return;
 						}
-						if (!kickedClient.hasRight(Right.superModerator) && !self.getUid().equals(kickedClient.getUid())) {
-							confirmKick.getDialog().open(handler);
+						if (!kickedClient.hasRight(Right.SUPER_MODERATOR) && !self.getUid().equals(kickedClient.getUid())) {
+							confirmKick.show(handler);
 						}
 					}
 					break;
 				case muteOthers:
-					if (room.getClient().hasRight(Right.muteOthers)) {
-						WebSocketHelper.sendRoom(new TextRoomMessage(room.getRoom().getId(), self, RoomMessage.Type.muteOthers, uid));
+					if (room.getClient().hasRight(Right.MUTE_OTHERS)) {
+						WebSocketHelper.sendRoom(new TextRoomMessage(room.getRoom().getId(), self, RoomMessage.Type.MUTE_OTHERS, uid));
 					}
 					break;
 				case mute:
@@ -270,8 +264,8 @@ public class RoomSidebar extends Panel {
 					if (c == null || !c.hasActivity(Client.Activity.AUDIO)) {
 						return;
 					}
-					if (self.hasRight(Right.moderator) || self.getUid().equals(c.getUid())) {
-						WebSocketHelper.sendRoom(new TextRoomMessage(room.getRoom().getId(), self, RoomMessage.Type.mute
+					if (self.hasRight(Right.MODERATOR) || self.getUid().equals(c.getUid())) {
+						WebSocketHelper.sendRoom(new TextRoomMessage(room.getRoom().getId(), self, RoomMessage.Type.MUTE
 								, new JSONObject()
 										.put("sid", self.getSid())
 										.put(PARAM_UID, uid)
@@ -292,7 +286,7 @@ public class RoomSidebar extends Panel {
 	private void toggleRight(IPartialPageRequestHandler handler, Client self, String uid, JSONObject o) {
 		try {
 			Right right = Right.valueOf(o.getString(PARAM_RIGHT));
-			if (self.hasRight(Right.moderator)) {
+			if (self.hasRight(Right.MODERATOR)) {
 				Client client = cm.get(uid);
 				if (client == null) {
 					return;
@@ -300,8 +294,8 @@ public class RoomSidebar extends Panel {
 				if (client.hasRight(right)) {
 					room.denyRight(client, right);
 				} else {
-					if (Right.video == right) {
-						room.allowRight(client, Right.audio, right);
+					if (Right.VIDEO == right) {
+						room.allowRight(client, Right.AUDIO, right);
 					} else {
 						room.allowRight(client, right);
 					}
