@@ -41,7 +41,6 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.util.Arrays;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.LinkedList;
@@ -82,6 +81,8 @@ import org.apache.wicket.ajax.AjaxRequestTarget;
 import org.apache.wicket.core.request.handler.IPartialPageRequestHandler;
 import org.apache.wicket.markup.html.list.ListItem;
 import org.apache.wicket.markup.html.list.ListView;
+import org.apache.wicket.model.IModel;
+import org.apache.wicket.model.ResourceModel;
 import org.apache.wicket.request.resource.JavaScriptResourceReference;
 import org.apache.wicket.request.resource.ResourceReference;
 import org.apache.wicket.spring.injection.annot.SpringBean;
@@ -93,7 +94,6 @@ import org.slf4j.LoggerFactory;
 import com.github.openjson.JSONArray;
 import com.github.openjson.JSONObject;
 import com.github.openjson.JSONTokener;
-import com.googlecode.wicket.jquery.ui.widget.dialog.DialogButton;
 
 public class WbPanel extends AbstractWbPanel {
 	private static final long serialVersionUID = 1L;
@@ -112,27 +112,29 @@ public class WbPanel extends AbstractWbPanel {
 		private static final long serialVersionUID = 1L;
 
 		@Override
-		protected void onSubmit(AjaxRequestTarget target, DialogButton btn) {
+		protected void onSubmit(AjaxRequestTarget target) {
 			String res = saveWb(roomId, wb2save, getModelObject());
 			if (!Strings.isEmpty(res)) {
 				error("Unexpected error while saving WB: " + res);
 				target.add(feedback);
+			} else {
+				super.onSubmit(target);
 			}
 		}
 
 		@Override
-		protected String getTitleStr() {
-			return getString("199");
+		protected IModel<String> getTitle() {
+			return new ResourceModel("199");
 		}
 
 		@Override
-		protected String getLabelStr() {
-			return getString("200");
+		protected IModel<String> getLabel() {
+			return new ResourceModel("200");
 		}
 
 		@Override
-		protected String getAddStr() {
-			return getString("144");
+		protected IModel<String> getAddBtnLabel() {
+			return new ResourceModel("144");
 		}
 	};
 	private final SerializableConsumer<Whiteboard> addUndo = wb -> {
@@ -149,11 +151,11 @@ public class WbPanel extends AbstractWbPanel {
 	public WbPanel(String id, RoomPanel rp) {
 		super(id, rp);
 		this.roomId = rp.getRoom().getId();
-		if (rp.getRoom().isHidden(RoomElement.Whiteboard)) {
+		if (rp.getRoom().isHidden(RoomElement.WHITEBOARD)) {
 			setVisible(false);
 		} else {
 			add(new ListView<>("clipart"
-					, Arrays.asList(OmFileHelper.getPublicClipartsDir().list())
+					, List.of(OmFileHelper.getPublicClipartsDir().list())
 						.stream()
 						.sorted()
 						.collect(Collectors.toList()))
@@ -216,9 +218,9 @@ public class WbPanel extends AbstractWbPanel {
 				break;
 			case downloadPdf:
 			{
-				boolean moder = c.hasRight(Room.Right.moderator);
+				boolean moder = c.hasRight(Room.Right.MODERATOR);
 				Room r = rp.getRoom();
-				if ((moder && !r.isHidden(RoomElement.ActionMenu)) || (!moder && r.isAllowUserQuestions())) {
+				if ((moder && !r.isHidden(RoomElement.ACTION_MENU)) || (!moder && r.isAllowUserQuestions())) {
 					try (PDDocument doc = new PDDocument()) {
 						JSONArray arr = obj.getJSONArray("slides");
 						for (int i = 0; i < arr.length(); ++i) {
@@ -249,12 +251,12 @@ public class WbPanel extends AbstractWbPanel {
 					Whiteboard wb = entry.getValue();
 					for (JSONObject o : wb.list()) {
 						String ft = o.optString(ATTR_FILE_TYPE);
-						if (BaseFileItem.Type.Recording.name().equals(ft) || BaseFileItem.Type.Video.name().equals(ft)) {
-							JSONObject _sts = o.optJSONObject(PARAM_STATUS);
-							if (_sts == null) {
+						if (BaseFileItem.Type.RECORDING.name().equals(ft) || BaseFileItem.Type.VIDEO.name().equals(ft)) {
+							JSONObject status = o.optJSONObject(PARAM_STATUS);
+							if (status == null) {
 								continue;
 							}
-							JSONObject sts = new JSONObject(_sts.toString()); //copy
+							JSONObject sts = new JSONObject(status.toString()); //copy
 							sts.put("pos", sts.getDouble("pos") + (System.currentTimeMillis() - sts.getLong(PARAM_UPDATED)) * 1. / 1000);
 							arr.put(new JSONObject()
 									.put("wbId", wb.getId())
@@ -273,7 +275,7 @@ public class WbPanel extends AbstractWbPanel {
 		}
 
 		//presenter-right
-		if (c.hasRight(Right.presenter)) {
+		if (c.hasRight(Right.PRESENTER)) {
 			switch (a) {
 				case createWb:
 				{
@@ -292,9 +294,9 @@ public class WbPanel extends AbstractWbPanel {
 					break;
 				case activateWb:
 				{
-					long _id = obj.optLong("wbId", -1);
-					if (_id > -1) {
-						wbm.activate(roomId, _id);
+					long wbId = obj.optLong("wbId", -1);
+					if (wbId > -1) {
+						wbm.activate(roomId, wbId);
 						sendWbAll(WbAction.activateWb, obj);
 					}
 				}
@@ -339,7 +341,7 @@ public class WbPanel extends AbstractWbPanel {
 			}
 		}
 		//wb-right
-		if (c.hasRight(Right.presenter) || c.hasRight(Right.whiteBoard)) {
+		if (c.hasRight(Right.PRESENTER) || c.hasRight(Right.WHITEBOARD)) {
 			switch (a) {
 				case createObj:
 				{
@@ -357,12 +359,12 @@ public class WbPanel extends AbstractWbPanel {
 					JSONArray arr = obj.getJSONArray("obj");
 					JSONArray undo = new JSONArray();
 					for (int i = 0; i < arr.length(); ++i) {
-						JSONObject _o = arr.getJSONObject(i);
-						String uid = _o.getString("uid");
+						JSONObject oi = arr.getJSONObject(i);
+						String uid = oi.getString("uid");
 						JSONObject po = wb.get(uid);
 						if (po != null) {
 							undo.put(po);
-							wb.put(uid, _o);
+							wb.put(uid, oi);
 						}
 					}
 					if (arr.length() != 0) {
@@ -378,8 +380,8 @@ public class WbPanel extends AbstractWbPanel {
 					JSONArray arr = obj.getJSONArray("obj");
 					JSONArray undo = new JSONArray();
 					for (int i = 0; i < arr.length(); ++i) {
-						JSONObject _o = arr.getJSONObject(i);
-						JSONObject u = wb.remove(_o.getString("uid"));
+						JSONObject oi = arr.getJSONObject(i);
+						JSONObject u = wb.remove(oi.getString("uid"));
 						if (u != null) {
 							undo.put(u);
 						}
@@ -400,7 +402,7 @@ public class WbPanel extends AbstractWbPanel {
 					break;
 				case save:
 					wb2save = obj.getLong("wbId");
-					fileName.open(handler);
+					fileName.show(handler);
 					break;
 				case undo:
 				{
@@ -466,34 +468,34 @@ public class WbPanel extends AbstractWbPanel {
 	@Override
 	protected String getRole() {
 		String role = ROLE_NONE;
-		if (rp.getClient().hasRight(Right.presenter)) {
-			role = Right.presenter.name();
-		} else if (rp.getClient().hasRight(Right.whiteBoard)) {
-			role = Right.whiteBoard.name();
+		if (rp.getClient().hasRight(Right.PRESENTER)) {
+			role = Right.PRESENTER.name();
+		} else if (rp.getClient().hasRight(Right.WHITEBOARD)) {
+			role = Right.WHITEBOARD.name();
 		}
 		return role;
 	}
 
-	private JSONObject addFileUrl(Client cl, String ruid, JSONObject _file) {
-		return addFileUrl(cl, ruid, _file, null);
+	private JSONObject addFileUrl(Client cl, String ruid, JSONObject file) {
+		return addFileUrl(cl, ruid, file, null);
 	}
 
-	private JSONObject addFileUrl(Client cl, String ruid, JSONObject _file, Consumer<BaseFileItem> consumer) {
+	private JSONObject addFileUrl(Client cl, String ruid, JSONObject file, Consumer<BaseFileItem> consumer) {
 		try {
-			final long fid = _file.optLong(ATTR_FILE_ID, -1);
+			final long fid = file.optLong(ATTR_FILE_ID, -1);
 			if (fid > 0) {
 				BaseFileItem fi = fileDao.getAny(fid);
 				if (fi != null) {
 					if (consumer != null) {
 						consumer.accept(fi);
 					}
-					return WbWebSocketHelper.addFileUrl(ruid, _file, fi, cl);
+					return WbWebSocketHelper.addFileUrl(ruid, file, fi, cl);
 				}
 			}
 		} catch (Exception e) {
 			//no-op, non-file object
 		}
-		return _file;
+		return file;
 	}
 
 	private static JSONArray getArray(JSONObject wb, Function<JSONObject, JSONObject> postprocess) {
@@ -527,10 +529,10 @@ public class WbPanel extends AbstractWbPanel {
 				return;
 			}
 			switch (fi.getType()) {
-				case Folder:
+				case FOLDER:
 					//do nothing
 					break;
-				case WmlFile:
+				case WML_FILE:
 				{
 					File f = fi.getFile();
 					if (f.exists() && f.isFile()) {
@@ -539,7 +541,7 @@ public class WbPanel extends AbstractWbPanel {
 							JSONArray arr = getArray(new JSONObject(new JSONTokener(br)), o -> {
 									wb.put(o.getString("uid"), o);
 									updated[0] = true;
-									return addFileUrl(rp.getClient(), wbs.getUid(), o, _f -> updateWbSize(wb, _f));
+									return addFileUrl(rp.getClient(), wbs.getUid(), o, bf -> updateWbSize(wb, bf));
 								});
 							if (updated[0]) {
 								wbm.update(roomId, wb);
@@ -552,7 +554,7 @@ public class WbPanel extends AbstractWbPanel {
 					}
 				}
 					break;
-				case PollChart:
+				case POLL_CHART:
 					break;
 				default:
 				{
@@ -568,7 +570,7 @@ public class WbPanel extends AbstractWbPanel {
 							.put("uid", wuid)
 							.put(ATTR_SLIDE, wb.getSlide())
 							;
-					if (FileItem.Type.Video == fi.getType() || FileItem.Type.Recording == fi.getType()) {
+					if (FileItem.Type.VIDEO == fi.getType() || FileItem.Type.RECORDING == fi.getType()) {
 						file.put(ATTR_OMTYPE, "Video");
 						file.put(PARAM_STATUS, new JSONObject()
 								.put("paused", true)
@@ -636,7 +638,7 @@ public class WbPanel extends AbstractWbPanel {
 	public String saveWb(Long roomId, Long wbId, String name) {
 		Whiteboard wb = wbm.get(roomId).get(wbId);
 		FileItem f = new FileItem();
-		f.setType(BaseFileItem.Type.WmlFile);
+		f.setType(BaseFileItem.Type.WML_FILE);
 		f.setRoomId(roomId);
 		f.setHash(randomUUID().toString());
 		f.setName(name);
